fix: increase padding to avoid label cut by scrollbar

--- a/src/public/style.scss
+++ b/src/public/style.scss
@@ -43,7 +43,7 @@
 
     a {
       color: #eee;
-      padding: 5px 10px;
+      padding: 5px 18px;
       display: block;
       text-decoration: none;
 
